deploy/internal/apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: librofm-runner
      port: 8090
      targetPort: 8090
    - name: libation-runner
      port: 8091
      targetPort: 8091
  selector:
    app: audiobookshelf
