deploy/internal/apps/audiobookshelf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://audiobooks.internal.ticklethepanda.co.uk
    gethomepage.dev/name: Audiobookshelf
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: audiobookshelf
    gethomepage.dev/description: Audiobook server
    gethomepage.dev/pod-selector: app=audiobookshelf
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`audiobooks.internal.ticklethepanda.co.uk`)
      services:
        - name: audiobookshelf
          namespace: audiobookshelf
          port: 80
